--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,9 @@
 Jinja2>=2.8.1
-MarkupSafe==0.23
-Pygments==1.6
-Sphinx==1.2.2
+MarkupSafe==2.0
+Pygments==2.15.0
+Sphinx==5.3.0
 beautifulsoup4==4.3.2
-docutils==0.12
-lxml==3.3.5
+docutils==0.14
+lxml==4.9.1
 six==1.7.3
-wsgiref==0.1.2
+# wsgiref==0.1.2
